# jobaman

./: .gitignore  Dockerfile  Makefile  README.md  job.sh  jobaman.ini  pyproject.toml  requirements.txt
jobaman/: config.py  helpers.py  logger.py  main.py
jobaman/api/: handlers.py  query.py  server.py
jobaman/jobs/: __init__.py  job.py  manager.py
tests/: base.py  test_manager.py
